# juno-pay-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: deploy-aws.yml  deploy-do.yml  release.yml
admin-dashboard/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
admin-dashboard/e2e/: admin.spec.ts  serve.js
admin-dashboard/scripts/: serve-out.js
api/: openapi.yaml
cmd/juno-pay-server/: junocashd_uptime_integration_test.go  main.go
demo-app/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
demo-app/e2e/: demo.spec.ts  serve.js
demo-app/src/: proxy.ts
deploy/aws/: README.md
deploy/cloudflare/: README.md
deploy/do/: CUTOVER.md  README.md
docker/demo-app/: Dockerfile
docker/juno-scan/: Dockerfile
docker/junocashd/: Dockerfile  entrypoint.sh  juno-cli
internal/api/: admin_deposits_test.go  admin_invoices_test.go  admin_refunds_test.go  admin_review_cases_test.go  admin_test.go  adminui.go  adminui_embed_adminui.go  adminui_embed_stub.go  adminui_option_adminui_test.go  adminui_test.go  api.go  api_test.go  demo_test.go  outbox_admin_test.go  public_events_test.go  status_test.go  status_uptime_unsupported_test.go
internal/keys/: keys.go
rust/keys/: Cargo.toml
rust/keys/include/: juno_keys.h
rust/keys/src/: lib.rs  zip316.rs
scripts/: gen-token-key-hex.sh
(+117 files in other folders)
