[package]
name = "juno_keys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "juno_keys"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
bech32 = "0.11.0"
f4jumble = "0.1.1"
orchard = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
zip32 = "0.2.1"
zeroize = "1.8.1"

